[package]
name = "wintertodt_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["ws", "headers"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
tower = { version = "0.4", features = ["util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = { version = "5", features = ["serde"] }